--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,19 +1,23 @@
 .about-main {
+  cursor: pointer;
   position: relative;
 }
-.about-main img {
-  width: 100%;
-  height: 732px;
-}
-.about-main .bg-list {
+.about-main .centered {
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
-  opacity: 1;
-  transition: 0.5s all ease-in-out;
-  z-index: 111111111111111;
+  top: 39%;
+  left: 50%;
+  max-width: 600px;
+  transform: translate(-50%, 50%);
+  text-align: center;
+}
+.about-main .centered p {
+  font-size: 26px;
+  line-height: 24px;
+  color: #ffffff;
+  font-family: "futura-light", "sans-serif";
+}
+.about-main .centered .play-btn {
+  margin-bottom: 30px;
 }
 
 .modal-box {
@@ -21,11 +25,21 @@
   outline: none !important;
   z-index: 1111111111111 !important;
 }
+.modal-box .thumbnail {
+  width: 100% !important;
+  height: 650px;
+}
 .modal-box iframe {
   border: none !important;
   outline: none !important;
 }
-.modal-box .close-box {
+
+.modal-wrapper {
+  box-shadow: none !important;
+  border: none !important;
+  z-index: 111111111111 !important;
+}
+.modal-wrapper .close-box {
   position: absolute;
   color: white;
   right: -147px;
