--- a/src/styles/about-slider.scss
+++ b/src/styles/about-slider.scss
@@ -17,6 +17,10 @@
         justify-content: center;
         gap: 1.3rem;
 
+        .arrow{
+            width: 4%;
+        }
+
         .item-wrapper {
             img {
                 margin: 0 auto;
