--- a/src/styles/about-item.css
+++ b/src/styles/about-item.css
@@ -5,11 +5,10 @@
 }
 .about__item .indicator-item {
   position: absolute;
+  top: 8.7%;
+  left: 2.5%;
+  max-width: 427px;
   transform: rotate(90deg);
-  top: 28.7%;
-  left: -33.5%;
-  right: 0;
-  bottom: 0;
 }
 .about__item .indicator-item-second {
   position: absolute;
@@ -19,11 +18,11 @@
 }
 .about__item .indicator-item-third {
   position: absolute;
-  top: 64.8%;
-  right: -29%;
+  top: 53.8%;
+  right: -4%;
   bottom: 0;
+  max-width: 727px;
   transform: rotate(90deg);
-  z-index: 1;
 }
 .about__item .indicator-item-fourth {
   position: absolute;
@@ -85,4 +84,40 @@
   transition: 0.5s all ease-in-out;
   left: -37%;
   transition: 0.5s all ease-in-out;
+}
+
+@media screen and (max-width: 576px) {
+  #indicator-item {
+    display: none;
+  }
+  .about__item .about__item-wrapper {
+    flex-wrap: wrap;
+    padding: 12px 12px;
+  }
+  .about__item .about__item-wrapper img {
+    width: 100%;
+  }
+  .about__item .about__item-wrapper .about__item-text {
+    padding-left: 82px;
+  }
+  .about__item .about__item-wrapper .about__item-num {
+    font-size: 165px !important;
+  }
+  .about__item .about__item-wrapper .text__first {
+    min-width: 134px !important;
+    line-height: 20px !important;
+    font-size: 26px !important;
+  }
+  .about__item img {
+    display: block;
+  }
+  .about__item .about__thumbnail img {
+    margin: 15px 0;
+  }
+  .about__item .about__item-desc {
+    width: 100% !important;
+    position: static !important;
+    order: 1;
+    display: flex;
+  }
 }/*# sourceMappingURL=about-item.css.map */
