--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -62,3 +62,37 @@
     }
 
 }
+
+
+@media screen and (max-width: 576px) {
+        .modal-box{
+            .thumbnail{
+                height: 311px;
+            }
+        }
+
+
+        .about-main{
+            .centered{
+                top: 10%;
+                left: 50%;
+                min-width: 324px;
+
+                p{
+                    font-size: 1rem;
+                }
+            }
+        }
+
+        .modal-wrapper{
+            iframe{
+                width: 350px;
+                height: 300px;
+            }
+            .close-box{
+                display: none;
+            }   
+        }
+
+        
+}
