--- a/src/styles/about-award.scss
+++ b/src/styles/about-award.scss
@@ -64,3 +64,18 @@
     }
    }
 }
+
+
+@media screen and (max-width: 576px) {
+    .about__award-index{
+        .about__award-order{
+            flex-wrap: wrap;
+            .order-image{
+                text-align: center !important;
+            }
+            .col-lg-8{
+                padding-left: 0 !important;
+            }
+        }
+    }
+}
