--- a/src/styles/about-slider.scss
+++ b/src/styles/about-slider.scss
@@ -1,6 +1,40 @@
 .about__slider {
     background: #F4E5D4;
 
+    .slick-next {
+        right: -75px;
+        top: 59%;
+        border-radius: 3px;
+        padding: 5px;
+        margin: 5px;
+
+        &::before {
+            content: "";
+        }
+    }
+
+    .slick-prev {
+        left: -75px;
+        top: 58%;
+        border-radius: 3px;
+        padding: 5px;
+        margin: 5px;
+
+        &::before {
+            content: "";
+        }
+    }
+
+    svg {
+        cursor: pointer;
+        color: black;
+        width: 1.5rem;
+        height: 1.5rem;
+        margin-top: -28px;
+        margin-left: -7px;
+        filter: invert(68%) sepia(48%) saturate(372%) hue-rotate(359deg) brightness(94%) contrast(88%);
+    }
+
     .about-head {
         font-weight: 400;
         font-size: 55px;
@@ -40,6 +74,37 @@
                 margin-top: 10px;
                 max-width: 200px;
             }
+        }
+    }
+}
+
+
+@media screen and (max-width: 576px) {
+    .about__slider{
+
+        .slick-prev{
+            left: 3px;
+            top: 51%;
+        }
+        .slick-next{
+            right: 10px;
+            top: 51%;
+        }
+        .about-head{
+            font-size: 40px;
+        }
+        .about-text{
+            font-size: 14px;
+        }
+
+        .item-wrapper{
+            img{
+                width: 65px !important;
+            }
+        }
+        
+        .about__item-order{
+            gap: .4rem;
         }
     }
 }
