--- a/src/styles/about-item.css
+++ b/src/styles/about-item.css
@@ -23,6 +23,7 @@
   bottom: 0;
   max-width: 727px;
   transform: rotate(90deg);
+  z-index: 11;
 }
 .about__item .indicator-item-fourth {
   position: absolute;
@@ -83,7 +84,7 @@
   bottom: -54px;
   transition: 0.5s all ease-in-out;
   left: -37%;
-  transition: 0.5s all ease-in-out;
+  z-index: 1111;
 }
 
 @media screen and (max-width: 576px) {
@@ -119,5 +120,92 @@
     position: static !important;
     order: 1;
     display: flex;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  #indicator-item {
+    display: none;
+  }
+  .about__item .about__item-wrapper {
+    flex-wrap: wrap;
+    padding: 12px 12px;
+  }
+  .about__item .about__item-wrapper img {
+    width: 100%;
+  }
+  .about__item .about__item-wrapper .about__item-text {
+    padding-left: 82px;
+  }
+  .about__item .about__item-wrapper .about__item-num {
+    font-size: 165px !important;
+  }
+  .about__item .about__item-wrapper .text__first {
+    min-width: 134px !important;
+    line-height: 20px !important;
+    font-size: 26px !important;
+  }
+  .about__item img {
+    display: block;
+  }
+  .about__item .about__thumbnail img {
+    margin: 15px 0;
+  }
+  .about__item .about__item-desc {
+    width: 100% !important;
+    position: static !important;
+    order: 1;
+    display: flex;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  #indicator-item {
+    display: none;
+  }
+  .about__item .about__item-wrapper {
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 12px 12px;
+  }
+  .about__item .about__item-wrapper img {
+    width: 100%;
+  }
+  .about__item .about__item-wrapper .about__item-text {
+    padding-left: 82px;
+  }
+  .about__item .about__item-wrapper .about__item-num {
+    font-size: 165px !important;
+  }
+  .about__item .about__item-wrapper .text__first {
+    min-width: 134px !important;
+    line-height: 20px !important;
+    font-size: 26px !important;
+  }
+  .about__item img {
+    display: block;
+  }
+  .about__item .about__thumbnail img {
+    margin: 15px 0;
+  }
+  .about__item .about__item-desc {
+    width: 100% !important;
+    position: static !important;
+    order: 1;
+    display: flex;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .about__item-wrapper {
+    padding: 145px 12px;
+  }
+  .about__item-wrapper .about__thumbnail img {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__item-wrapper {
+    padding: 145px 12px;
+  }
+  .about__item-wrapper .about__thumbnail img {
+    width: 100%;
   }
 }/*# sourceMappingURL=about-item.css.map */
