--- a/src/styles/about-slider.css
+++ b/src/styles/about-slider.css
@@ -3,7 +3,7 @@
 }
 .about__slider .slick-next {
   right: -75px;
-  top: 59%;
+  top: 58%;
   border-radius: 3px;
   padding: 5px;
   margin: 5px;
@@ -74,6 +74,50 @@
   .about__slider .slick-next {
     right: 10px;
     top: 51%;
+  }
+  .about__slider .about-head {
+    font-size: 40px;
+  }
+  .about__slider .about-text {
+    font-size: 14px;
+  }
+  .about__slider .item-wrapper img {
+    width: 65px !important;
+  }
+  .about__slider .about__item-order {
+    gap: 0.4rem;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  .about__slider .slick-prev {
+    left: -15.5px;
+    top: 51%;
+  }
+  .about__slider .slick-next {
+    right: -15.5px;
+    top: 51%;
+  }
+  .about__slider .about-head {
+    font-size: 40px;
+  }
+  .about__slider .about-text {
+    font-size: 14px;
+  }
+  .about__slider .item-wrapper img {
+    width: 65px !important;
+  }
+  .about__slider .about__item-order {
+    gap: 0.4rem;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  .about__slider .slick-prev {
+    top: 55%;
+    left: -1px;
+  }
+  .about__slider .slick-next {
+    right: 15.5px;
+    top: 55%;
   }
   .about__slider .about-head {
     font-size: 40px;
