Updated product filter section

--- a/src/styles/about-item.css
+++ b/src/styles/about-item.css
@@ -88,6 +88,9 @@
 }
 
 @media screen and (max-width: 576px) {
+  .scroll-element {
+    display: none;
+  }
   #indicator-item {
     display: none;
   }
@@ -123,6 +126,9 @@
   }
 }
 @media screen and (min-width: 576px) and (max-width: 768px) {
+  .scroll-element {
+    display: none;
+  }
   #indicator-item {
     display: none;
   }
@@ -158,6 +164,9 @@
   }
 }
 @media screen and (min-width: 768px) and (max-width: 992px) {
+  .scroll-element {
+    display: none;
+  }
   #indicator-item {
     display: none;
   }
