--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -8,13 +8,16 @@
   bottom: 0;
   z-index: 11111;
 }
+#navbar .navbar-toggler {
+  display: none;
+}
 #navbar .active {
   color: #EF9700 !important;
 }
 #navbar .main-nav a {
   color: white;
 }
-#navbar .header__social-link {
+#navbar .drawer__menu {
   display: none;
 }
 #navbar .navbar-nav {
@@ -50,15 +53,27 @@
   .header__social-link {
     width: 57%;
     text-align: end;
-    display: flex;
     justify-content: end;
     gap: 1rem;
-    display: block;
+    display: block !important;
   }
   .header__social-link svg {
     width: 1rem;
     height: 1rem;
     color: white;
+  }
+  .drawer__menu svg {
+    color: white;
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+  .drawer__index {
+    background: black !important;
+    z-index: 9999999999 !important;
+  }
+  .drawer__index h1 {
+    color: white;
+    font-size: 40px;
   }
   .navbar-toggler {
     border: none !important;
@@ -68,6 +83,44 @@
     border: none;
     border-radius: 0px;
     box-shadow: none !important;
+  }
+  .MuiDrawer-paper {
+    width: 100%;
+    padding: 70px 20px;
+    background: black !important;
+  }
+  .MuiDrawer-paper .top-content {
+    display: flex;
+    justify-content: space-between;
+  }
+  .MuiDrawer-paper .top-content .close-mark {
+    margin-top: auto;
+    margin-bottom: auto;
+    color: white;
+  }
+  .MuiDrawer-paper .top-content .close-mark svg {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+  .MuiDrawer-paper .main-content {
+    padding-top: 70px;
+  }
+  .MuiDrawer-paper .main-content .navbar-nav a {
+    padding-bottom: 20px;
+    color: white;
+  }
+  .MuiDrawer-paper .main-content .social-link {
+    margin-left: -15px;
+  }
+  .MuiDrawer-paper .main-content .social-link img {
+    width: 10%;
+    height: 20px;
+  }
+  .drawer__menu {
+    display: block !important;
+  }
+  .header__social-link {
+    display: none;
   }
 }
 @media screen and (min-width: 576px) and (max-width: 768px) {
